# trader-sentiment

./: .gitignore  README.md  pyproject.toml  set_env_example.sh  test_script.py
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
script/: batch_split_and_submit.py  run_batch_range.sh  run_extract_entity_sentiment_2023.sh
scripts/: debug_extract_sentiment.py
src/vnnews/: __init__.py  cli.py  collectors.py  config.py  crawler.py  robots.py  sitemap_client.py  state.py  utils.py
src/vnsentiment/: __init__.py  analyzer.py  cli.py  config.py  entity_classifier.py  models.py
symbols/: fetch_hose_symbols.py  fetch_icb_industries.py  hose_symbols.csv  icb_industries.csv
