[project]
name = "vnnews"
version = "0.1.0"
description = "Vietnam news sitemap collector and crawler"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Trader Sentiment Bot"}
]
dependencies = [
  "typer[all]>=0.12",
  "httpx>=0.26",
  "orjson>=3.9",
  "tenacity>=8.2",
  "news-please>=1.6",
  "python-dateutil>=2.8",
  "tqdm>=4.66"
]

[project.scripts]
vnnews = "vnnews.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.typer]
pretty_exceptions_show_locals = false
