[project]
name = "vnnews"
version = "0.1.0"
description = "Vietnam news sitemap collector and crawler"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Trader Sentiment Bot"}
]
dependencies = [
  "typer[all]==0.20.0",
  "httpx==0.28.1",
  "orjson==3.11.4",
  "tenacity==9.1.2",
  "news-please==1.6.16",
  "python-dateutil==2.9.0.post0",
  "tqdm==4.67.1",
  "openai==2.8.1",
  "underthesea==8.3.0",
  "vnstock==3.3.0"
]

[project.scripts]
vnnews = "vnnews.cli:app"
vnnews-sentiment = "vnsentiment.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.typer]
pretty_exceptions_show_locals = false
